# CArs

./: Cargo.toml  LICENSE  README.md
src/: conway.rs  eca.rs  lib.rs  main.rs  rule30.rs
