[package]
name = "cars"
version = "0.1.0"
edition = "2021"
description = "Crate for experimenting with cellular automata"
readme = "README.md"
authors = ["Pranav Teegavarapu <pranavnt@outlook.com>"]
repository = "https://github.com/pranavnt/CArs"
homepage = "https://github.com/pranavnt/CArs"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rand = "0.8.4"

[lib]
name = "cars"
crate-type = ["lib"]